Adding JVM arguments to bypass strong runtime encapsulation in Java 17